# LMS-fastapi

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml
alembic/data/: students.json
alembic/versions/: ccee7e3a66a6_.py
api/: courses.py  sections.py  users.py
api/utils/: users.py
db/: db_setup.py  db_test.py
db/models/: course.py  mixins.py  user.py
pydantic_schemas/: user.py
